<resources>
    <string name="app_name">Tripaway</string>
    <string name="api_key">AIzaSyD7qztjBaBRKNSYqnuB3Nf55uGE1uQYJpA</string>
    <string name="facebook_app_id">870284713893702</string>
    <string name="fb_login_protocol_scheme">fb870284713893702</string>
    <string name="tripawy">Tripawy</string>
    <string name="login">LogIn</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">LOGIN</string>
    <string name="password">Password</string>
    <string name="login2">Login?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="todo">TODO</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_history">History</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_logout">Logout</string>
    <string name="action_settings">action_settings</string>
    <string name="txtViewDate">Date</string>
    <string name="textViewTime">Time</string>
    <string name="txtTripName">Trip Name</string>
    <string name="txtTripType">Upcoming</string>
    <string name="txtStartPoint">Start Point</string>
    <string name="txtEndPoint">End Point</string>
    <string name="fromTo">fromTo</string>
    <string name="StartTrip">StartTrip</string>
    <string name="btnStartTrip">Start</string>
    <string name="btnNotes">btnNotes</string>
    <string name="LOGO">LOGO</string>
    <string name="mail">mail</string>
    <string name="username">Username</string>
    <string name="btnHomeScreenActivity">btnHomeScreenActivity</string>
    <string name="title_activity_home_screen2">HomeScreenActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="fragmentHistory">History</string>
    <string name="upcomingFragment">Upcoming</string>
    <string name="syncFragment">Sync</string>
    <string name="logoutFrgment">Logout</string>
    <string name="userName">Alaa Elmor</string>
    <string name="email">alaa.m.elmor@gmail.com</string>
    <string name="btnNewTrip" />
    <string name="txtTitle">Title</string>
    <string name="edtTitleNew" />
    <string name="txtStartPointNew">Start Point</string>
    <string name="btnCurrentLocation">Current location</string>
    <string name="edtStartPointNew" />
    <string name="edtEndPointNew" />
    <string name="menuActionNotes">Notes</string>
    <string name="menuActionEdit">Edit</string>
    <string name="menuActionDelete">Delete</string>
    <string name="menuActionCancel">Cancel\\</string>
    <string name="btnMenu">. . .</string>
    <string name="menuActionCancell">Cancel</string>
    <string name="updateData">Update data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pickTime">Pick time</string>
    <string name="datePicker" />
    <string name="timePicker" />
    <string name="btnAddTrip">Add Trip</string>
    <string name="txtRepeaterSpinner" />
    <string name="txtDirectionSpinner" />
    <string name="txtTripTypee" />
    <string name="txtTripTypeee">trip type</string>
    <string name="Delete">Delete</string>
    <string name="btn"><![CDATA[&#8942;]]></string>
    <string name="btnShowNotes">SHOW NOTES</string>
    <string name="deleteTrip">DELETE</string>
    <string name="ok">start</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_alert_dialog">title_activity_alert_dialog</string>
    <string name="snooze">snooze</string>

    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="twitter_api_key" translatable="false">sJSj3GUs9VJFBbc6SFd93zAQW</string>
    <string name="twitter_api_secret" translatable="false">hKPSrefymj6K24zqHsvoXX65xZ5CWosSYYJhL5lgf1Z5wJAFxI</string>

</resources>