<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txtViewDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTripName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txtTripName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDate" />

    <TextView
        android:id="@+id/txtTripType"
        android:layout_width="63dp"
        android:layout_height="24dp"
        android:layout_marginStart="152dp"
        android:text="@string/txtTripType"
        app:layout_constraintStart_toEndOf="@+id/txtTripName"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />

    <TextView
        android:id="@+id/txtStartPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtStartPoint"
        app:layout_constraintStart_toEndOf="@+id/imgArrow"
        app:layout_constraintTop_toBottomOf="@+id/txtTripName" />

    <TextView
        android:id="@+id/txtEndPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtEndPoint"
        app:layout_constraintStart_toEndOf="@+id/imgArrow"
        app:layout_constraintTop_toBottomOf="@+id/txtStartPoint" />

    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="32dp"
        android:layout_height="39dp"
        android:contentDescription="@string/FromTo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTripName"
        app:srcCompat="@drawable/arrow" />

    <Button
        android:id="@+id/btnStartTrip"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/StartTrip"
        android:text="@string/btnStartTrip"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEndPoint" />

    <ImageButton
        android:id="@+id/btnNotes"
        android:layout_width="60dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/addNote"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/btnStartTrip"
        app:layout_constraintTop_toBottomOf="@+id/txtTripType"
        app:srcCompat="@drawable/notebtn" />

</androidx.constraintlayout.widget.ConstraintLayout>