<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/my_logo"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tripawy"
        android:layout_below="@id/app_logo"
        android:layout_centerInParent="true"/>
    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/app_logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"/>

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/btn_sign_up"
        android:layout_centerInParent="true"
        android:paddingEnd="60dp"
        android:paddingStart="60dp" />
</RelativeLayout>